fix: 解决了overflow: hidden问题

--- a/app/mvip-manager/src/pages/company-info/base/index.less
+++ b/app/mvip-manager/src/pages/company-info/base/index.less
@@ -7,4 +7,8 @@
 .save-base-info-box {
   width: 690px;
   marginTop: 32px;
+  .btn {
+    border-color: #096DD9;;
+    background: #096DD9;
+  }
 }
